// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`index_including_gist.sql > line 1 1`] = `
[
  "/*
 * 1.1. test CREATE INDEX with buffered build
 */

-- Regular index with included columns
CREATE TABLE tbl_gist (c1 int, c2 int, c3 int, c4 box)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 106,
              "relname": "tbl_gist",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "c1",
                  "is_local": true,
                  "location": 116,
                  "typeName": {
                    "location": 119,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c2",
                  "is_local": true,
                  "location": 124,
                  "typeName": {
                    "location": 127,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c3",
                  "is_local": true,
                  "location": 132,
                  "typeName": {
                    "location": 135,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c4",
                  "is_local": true,
                  "location": 140,
                  "typeName": {
                    "location": 143,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including_gist.sql > line 8 1`] = `
[
  "INSERT INTO tbl_gist SELECT x, 2*x, 3*x, box(point(x,x+1),point(2*x,2*x+1)) FROM generate_series(1,8000) AS x",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "tbl_gist",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "x",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 97,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 8000,
                                        },
                                        "location": 99,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 81,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 28,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "x",
                              },
                            },
                          ],
                          "location": 28,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 31,
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Const": {
                              "ival": {
                                "ival": 2,
                              },
                              "location": 31,
                            },
                          },
                          "location": 32,
                          "name": [
                            {
                              "String": {
                                "sval": "*",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "x",
                                  },
                                },
                              ],
                              "location": 33,
                            },
                          },
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 36,
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Const": {
                              "ival": {
                                "ival": 3,
                              },
                              "location": 36,
                            },
                          },
                          "location": 37,
                          "name": [
                            {
                              "String": {
                                "sval": "*",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "x",
                                  },
                                },
                              ],
                              "location": 38,
                            },
                          },
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 41,
                      "val": {
                        "FuncCall": {
                          "args": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "x",
                                          },
                                        },
                                      ],
                                      "location": 51,
                                    },
                                  },
                                  {
                                    "A_Expr": {
                                      "kind": "AEXPR_OP",
                                      "lexpr": {
                                        "ColumnRef": {
                                          "fields": [
                                            {
                                              "String": {
                                                "sval": "x",
                                              },
                                            },
                                          ],
                                          "location": 53,
                                        },
                                      },
                                      "location": 54,
                                      "name": [
                                        {
                                          "String": {
                                            "sval": "+",
                                          },
                                        },
                                      ],
                                      "rexpr": {
                                        "A_Const": {
                                          "ival": {
                                            "ival": 1,
                                          },
                                          "location": 55,
                                        },
                                      },
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "point",
                                    },
                                  },
                                ],
                                "location": 45,
                              },
                            },
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Expr": {
                                      "kind": "AEXPR_OP",
                                      "lexpr": {
                                        "A_Const": {
                                          "ival": {
                                            "ival": 2,
                                          },
                                          "location": 64,
                                        },
                                      },
                                      "location": 65,
                                      "name": [
                                        {
                                          "String": {
                                            "sval": "*",
                                          },
                                        },
                                      ],
                                      "rexpr": {
                                        "ColumnRef": {
                                          "fields": [
                                            {
                                              "String": {
                                                "sval": "x",
                                              },
                                            },
                                          ],
                                          "location": 66,
                                        },
                                      },
                                    },
                                  },
                                  {
                                    "A_Expr": {
                                      "kind": "AEXPR_OP",
                                      "lexpr": {
                                        "A_Expr": {
                                          "kind": "AEXPR_OP",
                                          "lexpr": {
                                            "A_Const": {
                                              "ival": {
                                                "ival": 2,
                                              },
                                              "location": 68,
                                            },
                                          },
                                          "location": 69,
                                          "name": [
                                            {
                                              "String": {
                                                "sval": "*",
                                              },
                                            },
                                          ],
                                          "rexpr": {
                                            "ColumnRef": {
                                              "fields": [
                                                {
                                                  "String": {
                                                    "sval": "x",
                                                  },
                                                },
                                              ],
                                              "location": 70,
                                            },
                                          },
                                        },
                                      },
                                      "location": 71,
                                      "name": [
                                        {
                                          "String": {
                                            "sval": "+",
                                          },
                                        },
                                      ],
                                      "rexpr": {
                                        "A_Const": {
                                          "ival": {
                                            "ival": 1,
                                          },
                                          "location": 72,
                                        },
                                      },
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "point",
                                    },
                                  },
                                ],
                                "location": 58,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "box",
                              },
                            },
                          ],
                          "location": 41,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including_gist.sql > line 26 1`] = `
[
  "CREATE INDEX tbl_gist_idx ON tbl_gist using gist (c4) INCLUDE (c1,c2,c3)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "gist",
            "idxname": "tbl_gist_idx",
            "indexIncludingParams": [
              {
                "IndexElem": {
                  "name": "c1",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
              {
                "IndexElem": {
                  "name": "c2",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
              {
                "IndexElem": {
                  "name": "c3",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "indexParams": [
              {
                "IndexElem": {
                  "name": "c4",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 29,
              "relname": "tbl_gist",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including_gist.sql > line 80 1`] = `
[
  "DROP TABLE tbl_gist",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "tbl_gist",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`index_including_gist.sql > line 82 1`] = `
[
  "/*
 * 6. EXCLUDE constraint.
 */
CREATE TABLE tbl_gist (c1 int, c2 int, c3 int, c4 box, EXCLUDE USING gist (c4 WITH &&) INCLUDE (c1, c2, c3))",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 46,
              "relname": "tbl_gist",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "c1",
                  "is_local": true,
                  "location": 56,
                  "typeName": {
                    "location": 59,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c2",
                  "is_local": true,
                  "location": 64,
                  "typeName": {
                    "location": 67,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c3",
                  "is_local": true,
                  "location": 72,
                  "typeName": {
                    "location": 75,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c4",
                  "is_local": true,
                  "location": 80,
                  "typeName": {
                    "location": 83,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "Constraint": {
                  "access_method": "gist",
                  "contype": "CONSTR_EXCLUSION",
                  "exclusions": [
                    {
                      "List": {
                        "items": [
                          {
                            "IndexElem": {
                              "name": "c4",
                              "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                              "ordering": "SORTBY_DEFAULT",
                            },
                          },
                          {
                            "List": {
                              "items": [
                                {
                                  "String": {
                                    "sval": "&&",
                                  },
                                },
                              ],
                            },
                          },
                        ],
                      },
                    },
                  ],
                  "including": [
                    {
                      "String": {
                        "sval": "c1",
                      },
                    },
                    {
                      "String": {
                        "sval": "c2",
                      },
                    },
                    {
                      "String": {
                        "sval": "c3",
                      },
                    },
                  ],
                  "location": 88,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
